tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__Transistor-AAAAAAAAAAAAAAAAAAADEQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 785,
  "prerequisites": [
    752
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For the next tier we need advanced circuits. To make advanced circuits, you need transistors.\n\n[note]If you already made SMD Transistors you can hold 16 of them to skip this quest![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lTransistor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    752
  ],
  "rewards": [],
  "tasks": []
}
