tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__Trichlorosilanec-AAAAAAAAAAAAAAAAAAAF1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1492,
  "prerequisites": [
    1549
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Keep the hydrogen and continue in a second chemical reactor to obtain the purified Solar Grade Silicon. You get all the Hydrochloric Acid back!\n\nMaybe you can automate this process?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lTrichlorosilane - continued",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1549
  ],
  "rewards": [],
  "tasks": []
}
