tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__WayTwoBrewery-AAAAAAAAAAAAAAAAAAAC3w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 735,
  "prerequisites": [
    733
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you are lucky and find some brewing stands or have started using Thaumcraft to make one, you can craft a brewery. You get 1000mb of biomass out of 1000mb water and 1 bio chaff. Use Distilled water to get a better ratio and a much faster recipe.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lWay Two: Brewery",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    733
  ],
  "rewards": [],
  "tasks": []
}
