tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__WelcometotheChur-AAAAAAAAAAAAAAAAAAAIXQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2141,
  "prerequisites": [
    1148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you made it to MV using steam, you're probably wondering how to survive going further. One option is to switch to Light Fuel, discussed in LV. Another option is to use Benzene. Benzene is made from Wood Tar. There are a couple of pathways for that. Both start with logs from trees.\n\nOne path is to use Coke Ovens or Advanced Coke Ovens to make Charcoal, and fluid-extract Wood Tar from it. Then distill the Wood Tar to make Benzene. This method produces less pollution, but will also provide less Benzene.\n\nThe second path is to use the Pyrolyze Oven multiblock and Nitrogen gas to extract Wood Tar and Charcoal. Fluid-extract the Charcoal for additional Wood Tar. Then proceed as above. This method will create pollution from the Pyrolyze Oven, but will provide more Benzene per log.\n\nExcess wood tar can also be turned into Toluene, a key ingredient for explosives that you'll need later on to make rockets.\n\nIf you use the Charcoal Byproducts recipe, you can get a plethora of useful byproducts as well, but you'll need 4 DTs.\n\n[note]Later on you will get an even better option in the form the Industrial Coke Oven.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lWelcome to the Church of Benzene",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1148
  ],
  "rewards": [],
  "tasks": []
}
