tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__WheresThatHandym-AAAAAAAAAAAAAAAAAAAHfA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1916,
  "prerequisites": [
    1478
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Needs Maintenance cover will send out a redstone signal when the controller it's attached to requires maintenance. This is handy for the cleanroom you'll need to build in HV, since maintenance issues reduces cleanliness level and will cause voided materials.\n\nFor the cleanroom you can place this on the top or bottom. For other machines you might want to place it on the side so you can have access to the front face. In that case, you can use a soldering iron and fine solder to have it emit a strong redstone signal that will penetrate through a block next to the cover.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lWhere's That Handyman When You Need Him?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1478
  ],
  "rewards": [],
  "tasks": []
}
